--- a/argocd/apps/immich/http-route.yaml
+++ b/argocd/apps/immich/http-route.yaml
@@ -8,6 +8,10 @@ metadata:
   name: immich-httproute
   namespace: immich
 spec:
+  parentRefs:
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - immich.yanello.net
   rules:
