--- a/argocd/apps/infra/renovate/http-route.yaml
+++ b/argocd/apps/infra/renovate/http-route.yaml
@@ -8,6 +8,10 @@ metadata:
   name: renovate-httproute
   namespace: renovate
 spec:
+  parentRefs:
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - renovate.yanello.net
   rules:
