--- a/argocd/apps/infra/storage/longhorn/manifests/http-route.yaml
+++ b/argocd/apps/infra/storage/longhorn/manifests/http-route.yaml
@@ -8,6 +8,10 @@ metadata:
   name: longhorn-httproute
   namespace: longhorn
 spec:
+  parentRefs:
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - longhorn.yanello.net
   rules:
