--- a/argocd/apps/vaultwarden/manifests/http-route.yaml
+++ b/argocd/apps/vaultwarden/manifests/http-route.yaml
@@ -8,6 +8,10 @@ metadata:
   name: vaultwarden-httproute
   namespace: vaultwarden
 spec:
+  parentRefs:
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - bitwarden.yanello.net
   rules:
