--- a/argocd/apps/argocd/httproute.yaml
+++ b/argocd/apps/argocd/httproute.yaml
@@ -8,6 +8,10 @@ metadata:
   name: argocd-httproute
   namespace: argocd
 spec:
+  parentRefs:
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - argocd.yanello.net
   rules:
