--- a/argocd/apps/media-server/qbittorrent/manifests/http-route.yaml
+++ b/argocd/apps/media-server/qbittorrent/manifests/http-route.yaml
@@ -8,6 +8,10 @@ metadata:
   name: qbittorrent-httproute
   namespace: qbittorrent
 spec:
+  parentRefs:
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - qbit.yanello.net
   rules:
