--- a/argocd/apps/ytdl/http-route.yaml
+++ b/argocd/apps/ytdl/http-route.yaml
@@ -8,6 +8,10 @@ metadata:
   name: ytdl-idx-0
   namespace: ytdl
 spec:
+  parentRefs:
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - ytdl.yanello.net
   rules:
