--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -1,144 +1,178 @@
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: hass-vs
-# spec:
-#   hosts:
-#     - homeassistant.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: homeassistant.lan
-#             port:
-#               number: 8123
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: ntopng-vs
-# spec:
-#   hosts:
-#     - ntopng.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: router.lan
-#             port:
-#               number: 30341
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: nextcloud-vs
-# spec:
-#   hosts:
-#     - nextcloud.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: marcus-server.lan
-#             port:
-#               number: 6987
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: iotawatt-vs
-# spec:
-#   hosts:
-#     - iota.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: iotawatt.lan
-#             port:
-#               number: 80
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: adguardhome-vs
-# spec:
-#   hosts:
-#     - agh.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: agh.lan
-#             port:
-#               number: 3000
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: opn-vs
-# spec:
-#   hosts:
-#     - router.yanello.net
-#     - opn.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: router.lan
-#             port:
-#               number: 1000
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: pikvm-vs
-# spec:
-#   hosts:
-#     - pikvm.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: pikvm.lan
-#             port:
-#               number: 80
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: ubiquiti-vs
-# spec:
-#   hosts:
-#     - ui.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: homeassistant.lan
-#             port:
-#               number: 8880
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: grafana-vs
-# spec:
-#   hosts:
-#     - grafana.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: marcus-server.lan
-#             port:
-#               number: 4000
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: hass-vs
+spec:
+  hosts:
+    - homeassistant.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: homeassistant.lan
+            port:
+              number: 8123
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: ntopng-vs
+spec:
+  hosts:
+    - ntopng.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: router.lan
+            port:
+              number: 30341
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: nextcloud-vs
+spec:
+  hosts:
+    - nextcloud.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: marcus-server.lan
+            port:
+              number: 6987
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: iotawatt-vs
+spec:
+  hosts:
+    - iota.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: iotawatt.lan
+            port:
+              number: 80
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: adguardhome-vs
+spec:
+  hosts:
+    - agh.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: agh.lan
+            port:
+              number: 3000
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: opn-vs
+spec:
+  hosts:
+    - router.yanello.net
+    - opn.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: router.lan
+            port:
+              number: 1000
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: pikvm-vs
+spec:
+  hosts:
+    - pikvm.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: pikvm.lan
+            port:
+              number: 80
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: ubiquiti-vs
+spec:
+  hosts:
+    - ui.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: homeassistant.lan
+            port:
+              number: 8880
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: grafana-vs
+spec:
+  hosts:
+    - grafana.yanello.net
+  gateways:
+    - istio-system/gateway-api
+  http:
+    - route:
+        - destination:
+            host: marcus-server.lan
+            port:
+              number: 4000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: pikvm-service
+spec:
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
+---
+apiVersion: discovery.k8s.io/v1
+kind: EndpointSlice
+metadata:
+  name: pikvm-service-1 # by convention, use the name of the Service
+  # as a prefix for the name of the EndpointSlice
+  labels:
+    # You should set the "kubernetes.io/service-name" label.
+    # Set its value to match the name of the Service
+    kubernetes.io/service-name: pikvm-service
+addressType: IPv4
+ports:
+  - name: http # should match with the name of the service port defined above
+    appProtocol: http
+    protocol: TCP
+    port: 80
+endpoints:
+  - addresses:
+      - 192.168.1.9
+    conditions:
+      ready: true
+      serving: true
+      terminating: false
