--- a/argocd/apps/homebox/http-route.yaml
+++ b/argocd/apps/homebox/http-route.yaml
@@ -8,6 +8,10 @@ metadata:
   name: homebox-http-route
   namespace: homebox
 spec:
+  parentRefs:
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - homebox.yanello.net
   rules:
