--- a/argocd/apps/immich/kustomization.yaml
+++ b/argocd/apps/immich/kustomization.yaml
@@ -2,13 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deploy.yaml
-- vs.yaml
-- service.yaml
-- http-route.yaml
+- manifests/deploy.yaml
+- manifests/vs.yaml
+- manifests/service.yaml
+- manifests/http-route.yaml
 
 generators:
-- secret-generator.yaml
+- manifests/secret-generator.yaml
 
 patches:
 - patch: |-
