--- a/argocd/apps/infra/istio/resources/http-route.yaml
+++ b/argocd/apps/infra/istio/resources/http-route.yaml
@@ -29,30 +29,6 @@ metadata:
     gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
   labels:
     app.kubernetes.io/instance: istio-resources
-  name: pikvm-httproute
-  namespace: istio-system
-spec:
-  hostnames:
-    - pikvm.yanello.net
-  parentRefs:
-    - group: gateway.networking.k8s.io
-      kind: Gateway
-      name: kube-gateway
-  rules:
-    - backendRefs:
-        - name: pikvm-service
-          kind: Service
-          #group: networking.istio.io
-          port: 80
-
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
-  labels:
-    app.kubernetes.io/instance: istio-resources
   name: iotawatt-httproute
   namespace: istio-system
 spec:
@@ -158,27 +134,27 @@ spec:
           namespace: istio-system
           port: 8880
 ---
-# apiVersion: gateway.networking.k8s.io/v1
-# kind: HTTPRoute
-# metadata:
-#   annotations:
-#     gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
-#   labels:
-#     app.kubernetes.io/instance: istio-resources
-#   name: grafana-httproute
-#   namespace: istio-system
-# spec:
-#   hostnames:
-#     - grafana.yanello.net
-#   parentRefs:
-#     - group: gateway.networking.k8s.io
-#       kind: Gateway
-#       name: kube-gateway
-#   rules:
-#     - backendRefs:
-#         - name: marcus-server.lan
-#           namespace: istio-system
-#           port: 4000
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  annotations:
+    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+  labels:
+    app.kubernetes.io/instance: istio-resources
+  name: grafana-httproute
+  namespace: istio-system
+spec:
+  hostnames:
+    - grafana.yanello.net
+  parentRefs:
+    - group: gateway.networking.k8s.io
+      kind: Gateway
+      name: kube-gateway
+  rules:
+    - backendRefs:
+        - name: marcus-server.lan
+          namespace: istio-system
+          port: 4000
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
