--- a/argocd/apps/infra/istio/resources/grafana.yaml
+++ b/argocd/apps/infra/istio/resources/grafana.yaml
@@ -5,48 +5,48 @@ metadata:
     gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
   labels:
     app.kubernetes.io/instance: istio-resources
-  name: pikvm-httproute
+  name: grafana-httproute
   namespace: istio-system
 spec:
   hostnames:
-    - pikvm.yanello.net
+    - grafana.yanello.net
   parentRefs:
     - name: gateway-api
   rules:
     - backendRefs:
-        - name: pikvm-service
+        - name: grafana-service
           kind: Service
-          port: 80
+          port: 4000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: pikvm-service
+  name: grafana-service
 spec:
   ports:
     - name: http
       protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 4000
+      targetPort: 4000
 ---
 apiVersion: discovery.k8s.io/v1
 kind: EndpointSlice
 metadata:
-  name: pikvm-service-1 # by convention, use the name of the Service
+  name: grafana-service-1 # by convention, use the name of the Service
   # as a prefix for the name of the EndpointSlice
   labels:
     # You should set the "kubernetes.io/service-name" label.
     # Set its value to match the name of the Service
-    kubernetes.io/service-name: pikvm-service
+    kubernetes.io/service-name: grafana-service
     endpointslice.kubernetes.io/managed-by: cluster-admin
 addressType: IPv4
 ports:
   - name: http # should match with the name of the service port defined above
     appProtocol: http
     protocol: TCP
-    port: 80
+    port: 4000
 endpoints:
   - addresses:
-      - 192.168.1.9
+      - 192.168.1.18
     conditions:
       ready: true
