--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -67,3 +67,23 @@ spec:
           from: All
         kinds:
           - kind: HTTPRoute
+# ---
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: Gateway
+# metadata:
+#   name: tls-passthrough-gateway
+# spec:
+#   addresses:
+#     - value: 10.10.8.1
+#       type: IPAddress
+#   gatewayClassName: istio
+#   listeners:
+#     - name: gateway-tls-passthrough
+#       protocol: TLS
+#       port: 443
+#       hostname: "*.yanello.net"
+#       tls:
+#         mode: Passthrough
+#       allowedRoutes:
+#         namespaces:
+#           from: All
