--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -145,4 +145,27 @@ spec:
     targetRevision: HEAD
     path: argocd/apps/infra/istio/resources
 ---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: istio-external
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    name: in-cluster
+    namespace: istio-system
+  project: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+  source:
+    repoURL: https://github.com/myanello/homelab.git
+    targetRevision: HEAD
+    path: argocd/apps/infra/istio/external
+---
 
