--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      istio.io/gateway-name: gateway-api
+      gateway.networking.k8s.io/gateway-name: gateway-api
   action: ALLOW # denied non-matching
   rules:
     # Allow all traffic from internal network (LAN)
