--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -3,6 +3,10 @@ kind: AuthorizationPolicy
 metadata:
   name: allow-domain-access-policy
 spec:
+  targetRefs:
+    - name: gateway-api
+      kind: Gateway
+      group: gateway.networking.k8s.io
   action: ALLOW # denied non-matching
   rules:
     # Allow all traffic from internal network (LAN)
