--- a/argocd/apps/nextcloud/kustomization.yaml
+++ b/argocd/apps/nextcloud/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - ./manifests/vs.yaml
   - ./manifests/cm.yaml
-  - ./manifests/deploy.yaml
+  - ./manifests/http-route.yaml
   
 patches:
 - target:
