--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -40,6 +40,7 @@ kind: Gateway
 metadata:
   name: gateway-api
 spec:
+  replicas: 2
   addresses:
       # - type: Hostname
       #   value: gateway-api-svc.istio-system.svc.cluster.local
