--- a/argocd/apps/infra/myspeed/http-route.yaml
+++ b/argocd/apps/infra/myspeed/http-route.yaml
@@ -5,7 +5,7 @@ metadata:
     gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
   labels:
     app.kubernetes.io/instance: myspeed-app
-  name: myspeed-idx-0
+  name: myspeed-http-route
   namespace: myspeed
 spec:
   parentRefs:
