monitoring stack config

--- a/argocd/apps/infra/monitoring/grafana/manifests/secret-generator.yaml
+++ b/argocd/apps/infra/monitoring/grafana/manifests/secret-generator.yaml
@@ -1,11 +1,10 @@
 apiVersion: viaduct.ai/v1
 kind: ksops
 metadata:
-  name: mc-secret-generator
+  name: monitoring-secret-generator
   annotations:
     config.kubernetes.io/function: |
         exec:
           path: ksops
 files:
-  - ./manifests/grafana-secrets.yaml
-  - ./manifests/vmagent-secrets.yaml
+  - ./manifests/secrets.yaml
