--- a/argocd/apps/media-server/radarr/deploy.yaml
+++ b/argocd/apps/media-server/radarr/deploy.yaml
@@ -42,7 +42,7 @@ spec:
               value: "1000"
             - name: TZ
               value: America/Chicago
-          image: linuxserver/radarr:latest@sha256:620189d67078ddcfeb7a4efa424eb62f827ef734ef1e56980768bf8efd73782a
+          image: linuxserver/radarr:amd64-5.19.3@sha256:f68b553df8680cbbaa4bcb28c70dd322bf6ea86a35d7d5ba9b29f770f166e990
           imagePullPolicy: IfNotPresent
           name: radarr
           resources:
