--- a/argocd/apps/infra/monitoring/grafana/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/grafana/kustomization.yaml
@@ -1,17 +1,16 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+# apiVersion: kustomize.config.k8s.io/v1beta1
+# kind: Kustomization
 
-resources:
-  - ./manifests/http-route.yaml
+# resources:
+#   - ./manifests/http-route.yaml
   
-generators:
-  - ./manifests/secret-generator.yaml
+# generators:
+#   - ./manifests/secret-generator.yaml
 
-helmCharts:
-   
-  - name: grafana
-    releaseName: grafana
-    namespace: monitoring
-    repo: https://grafana.github.io/helm-charts
-    version: "*"
-    valuesFile: manifests/values.yaml
+# helmCharts:
+#   - name: grafana
+#     releaseName: grafana
+#     namespace: monitoring
+#     repo: https://grafana.github.io/helm-charts
+#     version: "*"
+#     valuesFile: manifests/values.yaml
