--- a/argocd/apps/infra/monitoring/victoria-metrics/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/victoria-metrics/kustomization.yaml
@@ -1,23 +1,23 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+# apiVersion: kustomize.config.k8s.io/v1beta1
+# kind: Kustomization
 
-resources:
-  - ./manifests/http-route.yaml
+# resources:
+#   - ./manifests/http-route.yaml
   
-generators:
-  - ./manifests/secret-generator.yaml
+# generators:
+#   - ./manifests/secret-generator.yaml
 
-helmCharts:
-  - name: victoria-metrics-cluster
-    releaseName: victoria-metrics-cluster
-    namespace: monitoring
-    repo: https://victoriametrics.github.io/helm-charts/
-    version: "*"
-    valuesFile: manifests/vmcluster-values.yaml
+# helmCharts:
+#   - name: victoria-metrics-cluster
+#     releaseName: victoria-metrics-cluster
+#     namespace: monitoring
+#     repo: https://victoriametrics.github.io/helm-charts/
+#     version: "*"
+#     valuesFile: manifests/vmcluster-values.yaml
 
-  - name: victoria-metrics-agent
-    releaseName: victoria-metrics-agent
-    namespace: monitoring
-    repo: https://victoriametrics.github.io/helm-charts/
-    version: "*"
-    valuesFile: manifests/vmagent-values.yaml
+#   - name: victoria-metrics-agent
+#     releaseName: victoria-metrics-agent
+#     namespace: monitoring
+#     repo: https://victoriametrics.github.io/helm-charts/
+#     version: "*"
+#     valuesFile: manifests/vmagent-values.yaml
