--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
@@ -34,6 +34,6 @@ spec:
     - grafanak8s.yanello.net
   rules:
     - backendRefs:
-        - name: grafana
+        - name: victoria-metrics-k8s-stack-grafana
           namespace: monitoring
           port: 80
