--- a/argocd/apps/mealie/manifests/deploy.yaml
+++ b/argocd/apps/mealie/manifests/deploy.yaml
@@ -24,7 +24,7 @@ spec:
           imagePullPolicy: IfNotPresent
           resources:
             limits:
-              cpu: 500m
+              cpu: '1'
               memory: 1Gi
             requests:
               cpu: 10m
