--- a/argocd/apps/mealie/manifests/deploy.yaml
+++ b/argocd/apps/mealie/manifests/deploy.yaml
@@ -19,6 +19,15 @@ spec:
       labels:
         app: mealie
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: kubernetes.io/hostname
+                    operator: In
+                    values:
+                      - marcus-server
       containers:
         - image: ghcr.io/mealie-recipes/mealie:v2.7.1@sha256:708e9ffb843bafdcebf46ee35bb45d1b003518e8c204483a1da039b4076ef980
           imagePullPolicy: IfNotPresent
