--- a/argocd/apps/mealie/manifests/deploy.yaml
+++ b/argocd/apps/mealie/manifests/deploy.yaml
@@ -33,7 +33,7 @@ spec:
           imagePullPolicy: IfNotPresent
           resources:
             limits:
-              cpu: '1000Mi'
+              cpu: '1000m'
               memory: 2Gi
             requests:
               cpu: 10m
