--- a/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
@@ -4,6 +4,9 @@ kind: Kustomization
 resources:
   - manifests/http-route.yaml
 
+generators:
+  - manifests/secret-generator.yaml
+
 helmCharts:
   - name: victoria-metrics-k8s-stack
     releaseName: victoria-metrics-k8s-stack
