--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -41,8 +41,8 @@ metadata:
   name: gateway-api
 spec:
   addresses:
-      - value: 10.10.8.1
-        type: IPAddress
+    - value: 10.10.8.1
+      type: IPAddress
   gatewayClassName: istio
   listeners:
     - name: http
@@ -74,18 +74,22 @@ metadata:
   name: http-redirect
 spec:
   parentRefs:
-  - name: gateway-api
-    sectionName: http  
+    - name: gateway-api
+      sectionName: http
   hostnames:
-  - "*.yanello.net"
-  - "yanello.net"
+    - "*.yanello.net"
+    - "yanello.net"
   rules:
-  - filters:
-    - type: RequestRedirect
-      requestRedirect:
-        scheme: https
-        statusCode: 301  # Permanent redirect
-        portRedirect: 443
+    - filters:
+        - type: RequestRedirect
+          requestRedirect:
+            scheme: https
+            statusCode: 301 # Permanent redirect
+            portRedirect: 443
+          matches:
+            - path:
+                type: PathPrefix
+                value: /
 # apiVersion: gateway.networking.k8s.io/v1
 # kind: Gateway
 # metadata:
