--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -81,15 +81,15 @@ spec:
     - "yanello.net"
   rules:
     - filters:
-        - type: RequestRedirect
-          requestRedirect:
-            scheme: https
-            statusCode: 301 # Permanent redirect
-            portRedirect: 443
-          matches:
-            - path:
-                type: PathPrefix
-                value: /
+      - matches:
+          - path:
+              type: PathPrefix
+              value: /
+        requestRedirect:
+          portRedirect: 443
+          scheme: https
+          statusCode: 301
+        type: RequestRedirect
 # apiVersion: gateway.networking.k8s.io/v1
 # kind: Gateway
 # metadata:
